# data-warehouse

./: .gitignore  Dockerfile  readme.md
Bink/: Makefile  dbt_project.yml  packages.yml  pyproject.toml
Bink/analyses/: generate_source.sql  genrate_model_yaml.sql
Bink/macros/: get_source_select.sql  keep_schema_names.sql  viator_weekly_files.sql
Bink/models/: exp.yml  exposures.yml  overview.md
Bink/models/marts/: bink.yml  channel.sql  date.sql  dim_loyalty_card.sql  dim_user.sql  fact_loyalty_card_add_auth.sql  fact_loyalty_card_auth.sql  fact_loyalty_card_join.sql  fact_loyalty_card_register.sql  fact_loyalty_card_removed.sql  fact_loyalty_card_status_change.sql  fact_payment_account.sql  fact_payment_account_status_change.sql  fact_transaction.sql  fact_transactions.sql  fact_user.sql  loyalty_card.sql  payment_accounts.sql  transactions.sql  user.sql  user_create_delete.sql
Bink/models/staging/: sources.yml  stg_export_transactions.sql  stg_hermes__SCHEME_CATEGORY.sql  stg_hermes__SCHEME_SCHEMEACCOUNT.sql  stg_histuser.sql  stg_matched_transactions.sql  stg_payment_account.sql  stg_payment_card.sql  stg_payment_transactions.sql  stg_scheme_transactions.sql  stg_user.sql
Bink/models/transformations/: transformed_apistats.sql  transformed_hermes_events.sql  (+7 more)
Bink/seeds/: lookup__account_status.csv  properties.yml
Prefect/: .gitignore  Makefile  Pipfile  profiles.yml  profiles_temp.yml  pyproject.toml  run_elt.py  run_monthly_full_refresh.py  run_monthy_full_refresh.py  viator_weekly.py
data-warehouse/Bink/: .gitignore  .sqlfluff  dbt_project.yml  manifest_extract.py  pyproject.toml
(+410 files in other folders)
