[tool.poetry]
name = "bink"
version = "0.1.0"
description = ""
authors = ["Anand Bhakta <abhakta@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.2.0"

[tool.poetry.dev-dependancies]
pydantic = "^1.10.6"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
