[tool.poetry]
name = "prefect"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.0"
dbt-snowflake = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
