[tool.poetry]
name = "bink"
version = "0.1.0"
description = ""
authors = ["Anand Bhakta <abhakta@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dbt-snowflake = "^1.5.5"
adlfs = "^2023.4.0"
prefect-dbt = "^0.3.1"
prefect-snowflake = "^0.26.1"
prefect-airbyte = "^0.2.0"
prefect-dask = "^0.2.5"
prefect = "^2.14.2"
prefect-shell = "^0.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
sqlfluff = "^2.3.0"
shandy-sqlfmt = "^0.19.2"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.sqlfmt]
exclude = ["target/**/*", "dbt_packages/**/*"]
line_length = 120
check = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
